tests/reference/ast-fixed_form_if_extra_paren-e5f88b5.stderr
tokenizer error: Unmatched `)` after the condition of the if statement
 --> tests/errors/fixed_form_if_extra_paren.f:3:30
  |
3 |          if (a == sayhello())) error stop
  |                              ^ 
